--- a/index.html
+++ b/index.html
@@ -148,6 +148,106 @@
         </section>
       </div>
     </section>
+
+    <section>
+      <div class="container text-center">
+        <div class="d-md-flex justify-content-center align-items-center">
+          <h2 class="mb-3 mb-md-0">Depoimentos</h2>
+        </div>
+      </div>
+      <section class="bg-warning text-light p-5">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <div class="square-box bg-primary p-4">
+                <h2 class="mb-3">Teste</h2>
+              </div>
+            </div>
+            <div class="col-md-6 d-none d-md-block">
+              <div class="square-box bg-secondary p-4">
+                <h2 class="mb-3">Teste</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <img src="" alt="imagem de crianca">
+      </section>
+    </section>
+
+    <section>
+      <div class="row g-0">
+        <div class="col-md-6 col-12">
+          <div class="p-5 text-center bg-image" id="intro1">
+            <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+              <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                  <h1 class="mb-3">Experimente!</h1>
+                  <h4 class="mb-3">Subheading</h4>
+                  <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12">
+          <div class="p-5 text-center bg-image" id="intro2">
+            <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+              <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                  <h1 class="mb-3">imagem</h1>
+                  <h4 class="mb-3">Subheading</h4>
+                  <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <section class="bg-primary text-light p-5">
+        <div class="container text-center">
+          <div class="d-md-flex justify-content-center align-items-center">
+            <h2 class="mb-3 mb-md-0">Fale conosco!</h2>
+          </div>
+          <p>Deixe sua pergunta</p>
+        </div>
+        <div class="container col-md-8 rounded bg-white p-5">
+          <form>
+            <!-- Name input -->
+            <div class="form-outline mb-4">
+              <input type="text" id="form4Example1" class="form-control" />
+              <label class="form-label" for="form4Example1">Name</label>
+            </div>
+
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+              <input type="email" id="form4Example2" class="form-control" />
+              <label class="form-label" for="form4Example2">Email address</label>
+            </div>
+
+            <!-- Message input -->
+            <div class="form-outline mb-4">
+              <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+              <label class="form-label" for="form4Example3">Message</label>
+            </div>
+
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+          </form>
+        </div>
+      </section>
+    </section>
+
+
+
+    </section>
+    </section>
+
+
   </main>
   <!-- main fim -->
 
