--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       <!-- Container wrapper -->
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" class="me-2" height="20"
-            alt="MDB Logo" loading="lazy" />
+          <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" class="me-2" height="20" alt="MDB Logo" loading="lazy" />
           <small>Aprendizado & Cia</small>
         </a>
         <!-- Toggle button -->
@@ -37,30 +36,41 @@
           aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
         </button>
-
-        <!-- Collapsible wrapper -->
-        <div class="collapse navbar-collapse" id="navbarRightAlignExample">
-          <!-- Left links -->
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#">Pagina Inicial</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#">Quem somos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">Como funciona</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link  " href="#">Contato</a>
-            </li>
-          </ul>
-          <!-- Left links -->
-        </div>
-        <!-- Collapsible wrapper -->
+  
+       
+    <!-- Collapsible wrapper -->
+    <div class="collapse navbar-collapse" id="navbarRightAlignExample">
+        <!-- Left links -->
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#">Quem somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">Como funciona</a>
+          </li>
+        </ul>
+        <!-- Left links -->
+        
+        <!-- Dropdown menu -->
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+            <img src="/img/login.png" alt="login">
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="signin.html">Login</a></li>
+              <li><a class="dropdown-item" href="signup.html">Cadastrar</a></li>
+            </ul>
+          </li>
+        </ul>
+        <!-- Dropdown menu -->
       </div>
-      <!-- Container wrapper -->
+      <!-- Collapsible wrapper -->
+    </div>
+    <!-- Container wrapper -->
     </nav>
   </header>
   <!-- navbar fim -->
