--- a/index.html
+++ b/index.html
@@ -163,6 +163,19 @@
             <li class="nav-item">
               <a class="nav-link" href="#contato">Contato</a>
             </li>
+        <!-- Dropdown menu -->
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+            <img src="/img/login.png" alt="login">
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="signin.html">Login</a></li>
+              <li><a class="dropdown-item" href="signup.html">Cadastrar</a></li>
+            </ul>
+          </li>
+        </ul>
+        <!-- Dropdown menu -->
           </ul>
           <!-- Left links -->
         </div>
