--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
       <!-- Container wrapper -->
       <div class="container-fluid justify-content-between">
         <a class="navbar-brand d-flex align-items-center flex-wrap" href="#">
-          <img src="./img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
-          <span class="d-none d-sm-inline text-nowrap text-truncate">Aprendizado & Cia</span>
+          <img src="https://media.discordapp.net/attachments/1109957747753091145/1115788848245514343/image__1_-removebg-preview.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
         </a>
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
@@ -163,19 +162,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#contato">Contato</a>
             </li>
-        <!-- Dropdown menu -->
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-            <img src="/img/login.png" alt="login">
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="signin.html">Login</a></li>
-              <li><a class="dropdown-item" href="signup.html">Cadastrar</a></li>
-            </ul>
-          </li>
-        </ul>
-        <!-- Dropdown menu -->
           </ul>
           <!-- Left links -->
         </div>
@@ -233,8 +219,7 @@
             <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top"
               alt="Sunset Over the Sea" />
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
+              <p class="card-text"> Descubra uma maneira divertida e educativa de aprendizado com o jogo de ligar! Ajude seu filho a desenvolver habilidades de coordenação e lógica. Clique aqui para explorar o jogo agora mesmo.</p>
             </div>
           </div>
         </div>
@@ -244,8 +229,7 @@
             <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top"
               alt="Sunset Over the Sea" />
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
+              <p class="card-text">Desperte o interesse do seu filho pela linguagem com o jogo Silabando! Aprender a formar sílabas e palavras nunca foi tão divertido. Clique aqui para jogar junto com seu filho.</p>
             </div>
           </div>
         </div>
@@ -255,8 +239,7 @@
             <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top"
               alt="Sunset Over the Sea" />
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
+              <p class="card-text">Teste a memória do seu filho com o jogo da Memória! Divirta-se encontrando os pares de cartas. Clique aqui para jogar juntos.</p>
             </div>
           </div>
         </div>
@@ -286,24 +269,69 @@
                 aria-label="Slide 3"></button>
             </div>
 
-            <!-- Inner -->
-            <div class="carousel-inner rounded-5">
-              <!-- Single item -->
-              <div class="carousel-item active">
-                <br>
-                <h2>Depoimentos</h2>
-                <div id="conteudoDep">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatem numquam voluptatibus
-                    nam?
-                    Eos
-                    pariatur natus veritatis unde cupiditate quasi quidem quos? Inventore, accusamus provident quisquam
-                    facilis nam velit labore.</p>
-                </div>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Nome da pessoa que fez o depoimento</h5>
-                  <p>Nome do filho</p>
-                </div>
-              </div>
+          <!-- Inner -->
+
+<!-- Carrossel -->
+<div id="meuCarrossel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+  <!-- Inner -->
+  <div class="carousel-inner rounded-5">
+    
+    <!-- Slide 1 -->
+    <div class="carousel-item active">
+      <br>
+      <h2>Depoimento da Jéssica</h2>
+      <div id="conteudoDep">
+        <p>Como mãe, eu estava realmente preocupada com a dificuldade que meu filho enfrentava para se familiarizar com as letras e aprender a ler. Foi então que descobri o Aprendizado & CIA, baseado em jogos educativos. Com entusiasmo, comecei a envolvê-lo nessa jornada de aprendizado, e foi incrível ver como ele se tornou mais engajado e motivado a cada atividade. Os jogos interativos e envolventes fizeram com que ele se divertisse enquanto desenvolvia suas habilidades de leitura e escrita. Hoje, tenho orgulho de dizer que meu filho está progredindo e alcançando o objetivo de se tornar um leitor confiante. O meu projeto de alfabetização online realmente fez a diferença em sua jornada educacional.</p>
+      </div>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Jéssica Martins</h5>
+        <p>Nome do filho: Enzo Martins</p>
+      </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="carousel-item">
+      <br>
+      <h2>Depoimento da Maria</h2>
+      <div id="conteudoDep">
+        <p>Meu nome é Maria e estava preocupada com a dificuldade que meu filho Pedro estava enfrentando para aprender a ler. Foi então que descobri um projeto de alfabetização online baseado em jogos chamado 'ABC Aventura'. Decidi experimentar e fiquei impressionada com os resultados! Pedro se envolveu de forma entusiasmada, pois os jogos interativos e desafiadores o motivaram a progredir no aprendizado das letras. Com o 'ABC Aventura', ele passou a associar as letras a imagens e sons, o que tornou o processo de alfabetização muito mais divertido e eficaz. Hoje, vejo meu filho Pedro se destacando na leitura e estou emocionada com sua evolução. O projeto de alfabetização online fez uma grande diferença em sua jornada educacional, e sou grata por isso.</p>
+      </div>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Maria santos</h5>
+        <p>Pedro Santos</p>
+      </div>
+    </div>
+    <!-- Slide 3 -->
+    <div class="carousel-item">
+      <br>
+      <img src="https://static.wixstatic.com/media/c22c23_7358fc38c49f455fa9318e9387262a69~mv2.png/v1/fill/w_67,h_65,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/new%20testimonials.png" style="padding-bottom: 10px;">
+      <h2>Depoimento de uma professora</h2>
+      <div id="conteudoDep">
+        <p>Na minha turma, vejo uma diversidade de níveis de leitura. Alguns alunos já conseguem ler textos com facilidade, enquanto outros, aos 8 ou 9 anos de idade, ainda não têm total familiaridade com todas as letras do alfabeto.
+
+          O cenário da volta às aulas me preocupa bastante, pois estamos funcionando em um modelo híbrido, alternando entre semanas presenciais e semanas de ensino remoto, na Escola Estadual São Bento, em Belo Horizonte (MG).
+          
+          A minha preocupação é que, normalmente, na 3ª série, as crianças já estariam na fase final do aprendizado básico de leitura e escrita. No entanto, percebo que há uma lacuna significativa nesse retorno às aulas e que a alfabetização foi fortemente impactada pela pandemia. Todos os alunos deveriam estar lendo, mas infelizmente essa não é a realidade.
+          </p>
+      </div>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Ana carolina guimarães</h5>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Inclua o Bootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
+
+<!-- Inicialize o carrossel -->
+<script>
+  var carousel = new bootstrap.Carousel(document.getElementById('meuCarrossel'), {
+    interval: 5000 // Intervalo de 5 segundos entre os slides
+  });
+</script>
+
+
 
               <!-- Single item -->
               <div class="carousel-item ">
