--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <!-- Container wrapper -->
       <div class="container-fluid justify-content-between">
         <a class="navbar-brand d-flex align-items-center flex-wrap" href="#">
-          <img src="https://media.discordapp.net/attachments/1109957747753091145/1115788848245514343/image__1_-removebg-preview.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
+          <img src="/img/login.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
         </a>
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
@@ -162,6 +162,20 @@
             <li class="nav-item">
               <a class="nav-link" href="#contato">Contato</a>
             </li>
+            <!-- Dropdown menu -->
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                  data-mdb-toggle="dropdown" aria-expanded="false">
+                  <img src="/img/login.png" alt="login">
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="signin.html" target="_blank">Login</a></li>
+                  <li><a class="dropdown-item" href="signup.html" target="_blank">Cadastrar</a></li>
+                </ul>
+              </li>
+            </ul>
+            <!-- Dropdown menu -->
           </ul>
           <!-- Left links -->
         </div>
