--- a/signin.html
+++ b/signin.html
@@ -19,7 +19,7 @@
   <!-- custom css login -->
   <link rel="stylesheet" href="/css/loginStyle.css">
   <!--  Validação formulario -->
-  <script src="/src/js/autenticação/signin.js"></script>
+  <script src="/src/js/autenticacao/signin.js"></script>
   <style>
     button:hover {
       background-color: #fffb1c;
@@ -39,9 +39,8 @@
     <nav class="navbar fixed-top shadow-3-soft navbar-expand-lg navbar-light bg-light p-3">
       <!-- Container wrapper -->
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center flex-wrap" href="#">
-          <img src="./img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
-
+        <a class="navbar-brand d-flex align-items-center flex-wrap" href="index.html">
+          <img src="/img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
         </a>
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
