--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastra-se</title>
+  <title>Cadastrar-se</title>
   <!-- MDB icon -->
   <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
   <!-- Font Awesome -->
@@ -15,16 +15,17 @@
   <!-- MDB -->
   <link rel="stylesheet" href="css/mdb.min.css" />
   <!-- custom css -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
   <!-- custom css signup -->
-  <link rel="stylesheet" href="css/signup.css">
+  <link rel="stylesheet" href="css/signup.css" />
   <!--   Validação formulário -->
-  <script src="/src/js/autenticação/signup.js"></script>
+  <script src="./src/js/autenticacao/signup.js"></script>
 
   <style>
     button:hover {
       background-color: #fffb1c;
       box-shadow: 0px 10px 40px -12px white;
+    }
   </style>
 </head>
 
@@ -33,8 +34,8 @@
     <nav class="navbar fixed-top shadow-3-soft navbar-expand-lg navbar-light bg-light p-3">
       <!-- Container wrapper -->
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
+        <a class="navbar-brand d-flex align-items-center flex-wrap" href="index.html">
+          <img src="/img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
         </a>
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
@@ -49,7 +50,7 @@
           <!-- Left links -->
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="index.html">Página Inicial</a>
+              <a class="nav-link" aria-current="page" href="index.html">Página Inicial</a>
             </li>
 
           </ul>
@@ -77,28 +78,28 @@
   </header>
 
 
-  <div class="main-login" style="background-color: #ABC777 ;">
+  <div class="main-login" style="background-color: #ABC777;">
     <div class="left-login">
       <img src="img/teste.svg" alt="imagem-esquerda" class="left-login-image">
     </div>
     <div class="right-login">
       <div class="card-login" style="background-color: #FFA99E;">
-        <h1 style="color: #ffeab5;">Cadastra-se</h1>
+        <h1 style="color: #ffeab5;">Cadastrar-se</h1>
         <form>
           <div class="textfield">
-            <label for="usuario" style="color: #ffeab5 ;">Nome Completo:</label>
+            <label for="nome-completo" style="color: #ffeab5;">Nome Completo:</label>
             <input type="text" name="nome" id="nome-completo" placeholder="Digite o nome para seu usuário">
           </div>
           <div class="textfield">
-            <label for="usuario" style="color: #ffeab5 ;">Email:</label>
+            <label for="email" style="color: #ffeab5;">Email:</label>
             <input type="text" id="email" name="email" placeholder="Digite o Email para sua conta">
           </div>
           <div class="textfield">
-            <label for="senha" style="color: #ffeab5 ;">Senha:</label>
+            <label for="senha" style="color: #ffeab5;">Senha:</label>
             <input type="password" name="senha" id="senha" placeholder="Digite uma senha">
           </div>
           <div class="textfield">
-            <label for="senha" style="color: #ffeab5 ;">Confirme a Senha:</label>
+            <label for="confirma-senha" style="color: #ffeab5;">Confirme a Senha:</label>
             <input type="password" name="confirma-senha" id="confirma-senha" placeholder="Digite uma senha">
           </div>
           <button class="btn-login">Fazer cadastro</button>
