--- a/signin.html
+++ b/signin.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- Google Fonts Roboto -->
@@ -39,9 +39,11 @@
     <nav class="navbar fixed-top shadow-3-soft navbar-expand-lg navbar-light bg-light p-3">
       <!-- Container wrapper -->
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center flex-wrap" href="index.html">
-          <img src="/img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
-        </a>
+        <div class="logoImagem">
+          <a class="navbar-brand d-flex align-items-center flex-wrap" href="index.html">
+            <img src="/img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
+          </a>
+        </div>
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
           data-mdb-target="#navbarRightAlignExample" aria-controls="navbarRightAlignExample" aria-expanded="false"
