--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastrar-se</title>
   <!-- MDB icon -->
-  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- Google Fonts Roboto -->
@@ -34,9 +34,11 @@
     <nav class="navbar fixed-top shadow-3-soft navbar-expand-lg navbar-light bg-light p-3">
       <!-- Container wrapper -->
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center flex-wrap" href="index.html">
-          <img src="/img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
-        </a>
+        <div class="logoImagem">
+          <a class="navbar-brand d-flex align-items-center flex-wrap" href="index.html">
+            <img src="/img/logo.png" class="me-2 me-sm-0" height="60" alt="MDB Logo" loading="lazy" />
+          </a>
+        </div>
         <!-- Toggle button -->
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
           data-mdb-target="#navbarRightAlignExample" aria-controls="navbarRightAlignExample" aria-expanded="false"
@@ -50,9 +52,8 @@
           <!-- Left links -->
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Página Inicial</a>
+              <a class="nav-link " aria-current="page" href="index.html">Página Inicial</a>
             </li>
-
           </ul>
           <!-- Left links -->
 
@@ -76,6 +77,7 @@
       <!-- Container wrapper -->
     </nav>
   </header>
+
 
 
   <div class="main-login" style="background-color: #ABC777;">
