--- a/index.html
+++ b/index.html
@@ -139,42 +139,51 @@
         <!-- card 1 -->
         <div class="col-lg card-custom shadow-1-soft">
           <div class="card h-100">
-            <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top"
-              alt="Sunset Over the Sea" />
-            <div class="card-body">
-              <p class="card-text"> Descubra uma maneira divertida e educativa de aprendizado com o jogo
-                de ligar! Ajude
-                seu filho a desenvolver habilidades de coordenação e lógica. Clique aqui para explorar o
-                jogo agora
-                mesmo.</p>
-            </div>
+            <a href="https://ligue-os-nomes-beta.netlify.app/" target="_blank">
+              <img src="/img/ligar.webp" class="card-img-top" alt="Sunset Over the Sea" />
+              <div class="card-body">
+                <p class="card-text">
+                  <a href="https://ligue-os-nomes-beta.netlify.app/" target="_blank" style="text-decoration: none; color: inherit;">
+                    Descubra uma maneira divertida e educativa de aprendizado com o jogo de ligar! Ajude
+                    seu filho a desenvolver habilidades de coordenação e lógica. Clique aqui para explorar o jogo agora mesmo.
+                  </a>
+                </p>
+              </div>
+            </a>
           </div>
         </div>
         <!-- card 2 -->
         <div class="col-lg card-custom shadow-1-soft">
           <div class="card">
-            <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top"
-              alt="Sunset Over the Sea" />
+            <a href="#">
+              <img src="/img/silabando.webp" class="card-img-top" alt="Sunset Over the Sea" />
+            </a>
             <div class="card-body">
-              <p class="card-text">Desperte o interesse do seu filho pela linguagem com o jogo Silabando!
-                Aprender a
-                formar sílabas e palavras nunca foi tão divertido. Clique aqui para jogar junto com seu
-                filho.</p>
+              <p class="card-text">
+                <a href="#" style="text-decoration: none; color: inherit;">
+                  Desperte o interesse do seu filho pela linguagem com o jogo Silabando! Aprender a formar sílabas e palavras nunca foi tão divertido. Clique aqui para jogar junto com seu filho.
+                </a>
+              </p>
             </div>
           </div>
         </div>
+        
         <!-- card 3 -->
         <div class="col-lg card-custom shadow-1-soft">
           <div class="card">
-            <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top"
-              alt="Sunset Over the Sea" />
+            <a href="https://jogo-da-memoria-v1.netlify.app/" target="_blank">
+              <img src="/img/memoria.jpg"  class="card-img-top" alt="Sunset Over the Sea"/>
+            </a>
             <div class="card-body">
-              <p class="card-text">Teste a memória do seu filho com o jogo da Memória! Divirta-se
-                encontrando os pares
-                de cartas. Clique aqui para jogar juntos.</p>
+              <p class="card-text" style="margin-bottom: 25px;">
+                <a href="https://jogo-da-memoria-v1.netlify.app/" target="_blank" style="text-decoration: none; color: inherit;">
+                  Teste a memória do seu filho com o jogo da Memória! Divirta-se encontrando os pares de cartas. Clique aqui para jogar juntos.
+                </a>
+              </p>
             </div>
           </div>
         </div>
+        
       </div>
       <br><br>
       <div class="container text-center">
